WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178641
[ARMv7] Fix initial start register support in YarrJIT
https://bugs.webkit.org/show_bug.cgi?id=178641
Summary
[ARMv7] Fix initial start register support in YarrJIT
Zan Dobersek
Reported
2017-10-22 00:01:41 PDT
It breaks the following three tests in a total of 16 variations: jsc-layout-tests.yaml/fast/regex/script-tests/dotstar.js mozilla-tests.yaml/js1_2/regexp/dot.js stress/regress-174044.js
Attachments
Patch
(1.63 KB, patch)
2017-10-22 01:40 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-10-22 01:40:09 PDT
Created
attachment 324522
[details]
Patch
Zan Dobersek
Comment 2
2017-10-30 01:17:45 PDT
Comment on
attachment 324522
[details]
Patch Clearing flags on attachment: 324522 Committed
r224172
: <
https://trac.webkit.org/changeset/224172
>
Zan Dobersek
Comment 3
2017-10-30 01:17:49 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-15 12:57:02 PST
<
rdar://problem/35568464
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug