[ARMv7] Fix initial start register support in YarrJIT https://bugs.webkit.org/show_bug.cgi?id=178641

Reviewed by Saam Barati.

* yarr/YarrJIT.cpp: On ARMv7, use r8 as the initialStart register in the
YarrGenerator class. r6 should be avoided since it's already used inside
MacroAssemblerARMv7 as addressTempRegister. r7 isn't picked because it
can be used as the frame pointer register when targetting ARM Thumb2.


Canonical link: https://commits.webkit.org/195137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224172 268f45cc-cd09-0410-ab3c-d52691b4dbfc